--- a/templates/index.html
+++ b/templates/index.html
@@ -3,16 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
+    <link rel="stylesheet" href="static/normalize.css">
+    <link rel="stylesheet" href="static/skeleton.css">
+    <link rel="stylesheet" href="static/mysticdoor.css">
     <title>Mystic Door</title>
 </head>
 <body>
 
-<div class="content-wrapper">
-    <div class="content">
-        <h1>Welcome to the Mystic Door Website!</h1>
-        <h3>Knock knock</h3>
-    </div>
+<div class="container">
+    <section class="header">
+        <h2 class="title">Mystic Door</h2>
+        <form method=post enctype=multipart/form-data>
+            <label class="button">
+                Browse <input type="file" hidden>
+            </label>
+            <input class="button button-primary" type=submit value=Upload>
+        </form>
+    </section>
 </div>
 
 </body>
