Files now properly upload to the server file system (folder = uploads)

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
         <h2 class="title">Mystic Door</h2>
         <form method=post enctype=multipart/form-data>
             <label class="button">
-                Browse <input type="file" hidden>
+                Browse <input type=file name=file hidden>
             </label>
             <input class="button button-primary" type=submit value=Upload>
         </form>
